ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Settings__c/CnP_PaaS__CnP_Auto_Responder_Settings__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Autoresponder Settings</label>
    <nameField>
        <label>C&amp;P Auto Responder Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Autoresponder Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>