ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Settings__c/fields/CnP_PaaS__BCC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__BCC_Email_Address__c</fullName>
    <label>BCC Email Address</label>
    <type>TextArea</type>
</CustomField>