ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Settings__c/fields/CnP_PaaS__Log_Archive__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Log_Archive__c</fullName>
    <label>Log Archive</label>
    <length>25</length>
    <type>Text</type>
</CustomField>