ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Settings__c/fields/CnP_PaaS__Mail_From_Address__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Mail_From_Address__c</fullName>
    <label>Mail From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>