ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Settings__c/fields/CnP_PaaS__SMS_Default_Responder__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Default_Responder__c</fullName>
    <label>SMS Default Responder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>