ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder_Settings__c/fields/CnP_PaaS__Subject__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>